workflow in progress

--- a/RockPaperScissors.html
+++ b/RockPaperScissors.html
@@ -8,6 +8,19 @@
     <title>RockPaperScissors</title>
 </head>
 <body>
+    <section id = "section1">
+        <p id="header"> ROCK PAPER SCISSORS</p>
+        <button id = "rock" onclick = "rock()">ROCK</button>
+        <button id = "paper" onclick = "paper()">PAPER</button>
+        <button id = scissors onclick = "scissors()">SCISSORS</button>
+    </section>
+    <section>
+        <p id = "playerData">YOU CHOSE:</p>
+        <P id ="computerData" >COMPUTER CHOSE:</P>
+        <p id = "winOrLose"></p>
+        <p id = "userScores">YOUR SCORE:</p>
+        <p id = "computerScores">COMPUTER SCORES:</p>
+    </section>
     <script src = "RockPaperScissors.js"></script> 
 </body>
 </html>
