first version of RPS

--- a/RockPaperScissors.html
+++ b/RockPaperScissors.html
@@ -16,10 +16,10 @@
     </section>
     <section>
         <p id = "playerData">YOU CHOSE:</p>
-        <P id ="computerData" >COMPUTER CHOSE:</P>
-        <p id = "winOrLose"></p>
-        <p id = "userScores">YOUR SCORE:</p>
-        <p id = "computerScores">COMPUTER SCORES:</p>
+        <P id ="computerData" >COMPUTER CHOSE</P>
+       <!-- <p id = "winOrLose"></p> -->
+        <p id = "userScores">YOUR SCORE: 0</p>
+        <p id = "computerScores">COMPUTER SCORES: 0</p>
     </section>
     <script src = "RockPaperScissors.js"></script> 
 </body>
