--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <section>
         <p id = "playerData">YOU CHOSE:</p>
         <P id ="computerData" >COMPUTER CHOSE</P>
-       <!-- <p id = "winOrLose"></p> -->
         <p id = "userScores">YOUR SCORE: 0</p>
         <p id = "computerScores">COMPUTER SCORES: 0</p>
+        <p id = "winOrLose"></p>
     </section>
     <script src = "RockPaperScissors.js"></script> 
 </body>
